feat: Update email domain validation for IITR subdomain format
- Support IITR email format: abc_d@branch.iitr.ac.in (e.g., abc_d@ee.iitr.ac.in)
- Updated isValidEmail() to handle subdomain structure
- Updated Google OAuth to use base domain (iitr.ac.in)
- Updated env.example with proper format documentation
- Any email ending with iitr.ac.in is now accepted

--- a/env.example
+++ b/env.example
@@ -4,5 +4,8 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Allowed email domain for authentication (e.g., @iitr.ac.in)
-NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=@abc.iit.ac.in
+# Allowed email domain suffix for authentication
+# This accepts any email ending with this domain (e.g., abc_d@ee.iitr.ac.in, abc_d@cse.iitr.ac.in)
+# Format: first_lastinitial@branch.iitr.ac.in
+NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=iitr.ac.in
+
